@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-07-29  Erik Grinaker <erikg@codepoet.no>
+
+	* moved data about the current file into the EntryStore class
+
 2004-07-28  Erik Grinaker <erikg@codepoet.no>
 
 	* added various separate password dialogs, instead of
